# rag-document-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/corpus/: api.md  faq.md  overview.md  pricing.md  security.md
src/ragassistant/: __init__.py  cli.py  config.py  documents.py  embeddings.py  evaluate.py  generator.py  ingest.py  rag.py  retriever.py  vector_store.py
tests/: test_documents.py  test_vector_store.py
