[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-document-assistant"
version = "1.0.0"
description = "Retrieval-augmented generation assistant that answers questions over a document corpus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2",
    "anthropic>=0.39",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
